...
                                  ),
                                ],
                              ),
                              child: AppTextField(
                                controller: _usernameController,
                                validator: Validator.nullOrEmptyValidation,
                                hintText: 'Username or Email',
                                onChanged: (value) =>
                                    _bloc.onChangeEmail(value),
                              ),
                            ),
                          ),
                        ),
...
                              alignment: Alignment.centerRight,
                              child: TextButton(
                                onPressed: () => AppNavigator.pushNamed(
                                  RouterName.forgotPassword,
                                ),
                                child: const Text(
                                  'Forgot Password?',
                                  style: TextStyle(
                                    color: Colors.white,
                                    fontWeight: FontWeight.w600,
                                  ),
                                ),
                              ),
...
                                  shadowColor: Colors.transparent,
                                  shape: RoundedRectangleBorder(
                                    borderRadius: BorderRadius.circular(12),
                                  ),
                                ),
                                child: const Text(
                                  'Login',
                                  style: TextStyle(
                                    fontSize: 18,
                                    color: Colors.white,
                                    fontWeight: FontWeight.bold,
                                  ),
                                ),
...
                                  onTap: () => Navigator.of(context).push(
                                    MaterialPageRoute(
                                      builder: (_) => const RegisterPage(),
                                    ),
                                  ),
                                  child: const Text(
                                    'Register',
                                    style: TextStyle(
                                      color: Colors.white,
                                      fontWeight: FontWeight.bold,
                                      decoration: TextDecoration.underline,
                                    ),
                                  ),
...
