...
                                        ],
                                      ),
                                      child: AppTextField(
                                        controller: _fullNameController,
                                        validator:
                                            Validator.nullOrEmptyValidation,
                                        hintText: 'Full Name',
                                        prefixIcon: const Icon(
                                          Icons.person_outline,
                                        ),
                                        textInputAction: TextInputAction.next,
                                        keyboardType: TextInputType.name,
                                        onChanged: (value) =>
...
